--- a/dipson.html
+++ b/dipson.html
@@ -56,7 +56,7 @@ section.active {opacity:1; transform:rotateY(0deg);}
 </nav>
 </header>
 <section id="hero" class="active">
-<h1>Hi, I'm Deepika 👩‍💻</h1>
+<h1>Hi, I'm Dipson Nepal</h1>
 <p class="typing" id="typing"></p>
 <p>Passionate about coding, design, and creating impactful projects.</p>
 </section>
